--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "firebase": "^10.10.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -19,6 +20,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2"
